chore: 降级Spring Boot至2.7.18，Java至8，调整依赖版本
（本次提交主要降级了Spring Boot版本从3.2.0到2.7.18，Java版本从17到8，并相应调整了pom.xml中的相关依赖版本，包括测试依赖testcontainers的版本指定和h2数据库作用域调整。同时统一将Jakarta EE包名从jakarta.*改回javax.*，这是旧版本Spring Boot的默认依赖。）